--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -27,6 +27,7 @@ http {
         listen 8080;
         server_name 2.server.iirii.com;
         root /usr/share/nginx/html;
+        index index.html;
 
         ssl_certificate   /etc/ssl/certs/iirii.com/fullchain.cer;
         ssl_certificate_key /etc/ssl/certs/iirii.com/iirii.com.key;
