--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,11 +1,7 @@
-# HTTP 代理端口
-port: 7890
-
-# SOCKS5 代理端口
-socks-port: 7891
-
-# Linux 和 macOS 的 redir 代理端口
-redir-port: 7892
+# port: 7890 # HTTP(S) 代理服务器端口
+# socks-port: 7891 # SOCKS5 代理端口
+mixed-port: 7890 # HTTP(S) 和 SOCKS 代理混合端口
+# redir-port: 7892 # 透明代理端口，用于 Linux 和 MacOS
 
 # 允许局域网的连接
 allow-lan: true
